--- a/css/styles.css
+++ b/css/styles.css
@@ -231,14 +231,15 @@ p{
 
   .bottom-section ul{
       font-size: 13px;
-      margin-right: 30%;
+      /* margin-left:10px; */
+      padding: 0;
       text-align: justify;
-      width: 50%;
+      width: 40%;
   }
 
   .bottom-section ul li{
     margin-bottom: 10px;
-	padding: 0 6px 0px 20px;
+	padding: 0 3px 0px 15px;
 	list-style: none;
 	background-image: url("/images/icon-check.svg");
 	background-repeat: no-repeat;
@@ -246,18 +247,17 @@ p{
 	background-size: 15px;
   }
 
-  /* .trial-button{
-      border-radius: 50px;
-      margin:0;
-      padding: 0;
-      width: 250px;
-  } */
-
   .btn-xl {
       font-size: 15px;
       border-radius: 50px;
-      margin: 20px 0 0 250px;
+      margin: 3% 0 0 45%;
       padding: 10px 10px;
       position: absolute;
-      width:170px;  
+      width:40%;  
+}
+
+@media (max-width:600px){
+  .bottom-section ul{
+    width: 70%;
+  }
 }
